--- a/dasein-client/package.json
+++ b/dasein-client/package.json
@@ -11,15 +11,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
     "vite": "^6.0.0",
     "vite-plugin-solid": "^2.11.1"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.1",
+    "@tailwindcss/vite": "^4.0.7",
     "solid-js": "^1.9.3",
+    "tailwindcss": "^4.0.7",
     "temporal-polyfill": "^0.2.5"
   }
 }
