Gets to listen to new teacher additions

--- a/dasein-client/package.json
+++ b/dasein-client/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@automerge/automerge": "^2.2.8",
     "@automerge/automerge-repo": "^1.2.1",
+    "@automerge/automerge-repo-network-broadcastchannel": "^1.2.1",
     "@automerge/automerge-repo-network-messagechannel": "^1.2.1",
     "@automerge/automerge-repo-storage-indexeddb": "^1.2.1",
     "@solidjs/router": "^0.15.1",
